@@ -52,15 +52,15 @@ class AffyChpParameter {
 
 		switch (type) {
 			case INT8:
-				result = new Integer((int) (char) valueBytes[0]); break; // untested
+				result = Integer.valueOf((int) (char) valueBytes[0]); break; // untested
 			case UINT8:
-				result = new Integer((int) (char) valueBytes[0]); break; // untested (seems to be wrong)
+				result = Integer.valueOf((int) (char) valueBytes[0]); break; // untested (seems to be wrong)
 			case INT16:
-				result = new Short(bb.getShort()); break; // untested
+				result = Short.valueOf(bb.getShort()); break; // untested
 			case UINT16:
-				result = new Integer((int) (char) bb.getShort()); break; // untested
+				result = Integer.valueOf((int) (char) bb.getShort()); break; // untested
 			case INT32:
-				result = new Integer(bb.getInt(0)); break; //OK
+				result = Integer.valueOf(bb.getInt(0)); break; //OK
 			case UINT32:
 				throw new RuntimeException("Can't do type UINT32");
 			case FLOAT:
