@@ -150,7 +150,7 @@ public final class ScoredIntervalParser {
 					if (tag.startsWith("score")) {
 						try {
 							int score_index = Integer.parseInt(tag.substring(tag.indexOf("score") + 5));
-							index2id.put(new Integer(score_index), val);
+							index2id.put(Integer.valueOf(score_index), val);
 						} catch (NumberFormatException nfe) {
 							throw new IOException("Tag '"+tag+"' is not in the format score# where # = 0,1,2,....");
 						}
@@ -389,7 +389,7 @@ public final class ScoredIntervalParser {
 	private List<String> initScoreNames(int score_count, Map<Integer,String> index2id, String stream_name) {
 		List<String> names = new ArrayList<String>();
 		for (int i=0; i<score_count; i++) {
-			Integer index = new Integer(i);
+			Integer index = Integer.valueOf(i);
 			String id = index2id.get(index);
 			if (id == null) {
 				if (stream_name == null) {  id = "score" + i;  }
